Push avg values changes
